--- a/twelveth - Copy/twelveth.html
+++ b/twelveth - Copy/twelveth.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 
-<a href="linkimage.jpg"><img src="fb.png" alt="HTML tutorial" style="width:42px;height:42px;"></a>
+<a href="./linkimage.jpg"><img src="fb.png" alt="HTML tutorial" style="width:42px;height:42px;"></a>
 
 </body>
 </html>
